--- a/task4-position.html
+++ b/task4-position.html
@@ -80,11 +80,12 @@
 	【歌词片段】<br />
 	　　你嫁衣如火灼伤了天涯，从此残阳烙我心上如朱砂。都说你眼中开倾世桃花，却如何一夕桃花雨下。<br />
 	</div>
-	<footer><p>版权所有&copy;xian
-		         <script type="text/javascript">
-		            document.write(new Date().getFullYear());
-		         </script>
-           </p>
+	<footer>
+		<p>版权所有&copy;xian
+		    <script type="text/javascript">
+		       document.write(new Date().getFullYear());
+		    </script>
+        </p>
     </footer>
 </body>
 
