--- a/task4-position.html
+++ b/task4-position.html
@@ -39,7 +39,7 @@
 	  }
 	}
 	/*设置小屏显示*/
-	@media screen and (max-width:884px)
+	@media only screen and (max-width:884px)
 	{ 
 	  html
 	  {
@@ -57,15 +57,17 @@
 	    background-repeat: no-repeat;
 	    background-color:rgba(70,50,50,0.7);
 	    padding:40px;
-	    margin:0 auto;
+	    margin:0 10px 0 5px;
 	    text-indent:2em;
+	    position:absolute;
+	    top:50%;/*上偏移50%*/  
+	    transform: translate(0, -50%);/*2D转换，向左向上移动div的50%距离*/
 	  }
 	  footer
- 	 {
-	    position:absolute;
-	    right:10px;
+	  {
+	    text-align:right;
 	    font-size:12px;
-	    color:black;
+	    color:white;
 	  }
 	}
 	</style>
@@ -77,16 +79,16 @@
 	  代表作《上邪》<br />
 	【文案】<br />
 	　　公元二零一二年，陕西西安考古又发现一墓葬，通过墓志铭可判断其为一位将军与一位宗室女子合葬墓，主墓室存放双人合葬棺椁，但合葬棺内却仅有一具男性尸骨。意外的是，墓志铭上该宗室女子封号与史册记载的一位同时代的和亲公主封号一致。<br />
-	【歌词片段】<br />
+	  【歌词片段】<br />
 	　　你嫁衣如火灼伤了天涯，从此残阳烙我心上如朱砂。都说你眼中开倾世桃花，却如何一夕桃花雨下。<br />
 	</div>
 	<footer>
 		<p>版权所有&copy;xian
-		    <script type="text/javascript">
-		       document.write(new Date().getFullYear());
-		    </script>
-        </p>
-    </footer>
+	        <script type="text/javascript">
+	            document.write(new Date().getFullYear());
+	        </script>
+	    </p>
+	</footer>
 </body>
 
 </html>
